--- a/Recipes/templates/about/help.html
+++ b/Recipes/templates/about/help.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
-{% block title %}
-<title> Login </title>
+{% block  title%}
+<title>Help</title>
 {% endblock  %}
 
 {% block main %}
@@ -12,7 +12,7 @@
   <div class="modal-dialog">
     <div class="modal-content rounded-5 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
-        <h2 class="fw-bold mb-0">Enter to the profile</h2>
+        <h2 class="fw-bold mb-0">Feedback form</h2>
       </div>
 
       <div class="modal-body p-5 pt-0">
@@ -35,7 +35,7 @@
         <form method="post"
 
           {% if action_url %}
-              action="{% url action_url %}"
+              action="{% url 'about:send_message' %}"
             {% endif %}>
 
           {% csrf_token %}
@@ -66,7 +66,7 @@
             </div>
           {% endfor %}
 
-          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Login</button>
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Send</button>
 
         </form>
 
