--- a/Recipes/templates/includes/head.html
+++ b/Recipes/templates/includes/head.html
@@ -14,9 +14,9 @@
 <link href="{% static 'css/headers.css' %}" rel="stylesheet">
 <link href="{% static 'css/footers.css' %}" rel="stylesheet">
 <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+<link href="{% static 'css/bootstrap.min.css.map' %}" rel="stylesheet">
 <!-- Custom styles for this template -->
-<!-- <link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet"> -->
-
+<!--<link href="https://fonts.googleapis.com/css?family=Playfair&#43;Display:700,900&amp;display=swap" rel="stylesheet">-->
 
 
 <style>
@@ -40,10 +40,12 @@
   }
 </style>
 <style>
+
 .form-control {
   font-size: 15px;
   padding: 10px;
   width: 400px;
 }
 </style>
+
 {% endblock %}
