--- a/Recipes/templates/users/signup.html
+++ b/Recipes/templates/users/signup.html
@@ -1,34 +1,77 @@
 {% extends 'base.html' %}
-{% block  title%}
-<title>SignUp</title>
-{% endblock  %}
-{% block main %}
+{% block title %}
+<title> SignUp </title>
+{% endblock %}
 
+{% block main %} 
 
+{% load user_filters %}
 
 <div class="modal modal-signin position-static d-block bg-secondary py-5" tabindex="-1" role="dialog" id="modalSignin">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog">
     <div class="modal-content rounded-5 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
-        <!-- <h5 class="modal-title">Modal title</h5> -->
-        <h2 class="fw-bold mb-0">Sign up for free</h2>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <h2 class="fw-bold mb-0">Sign Up</h2>
       </div>
 
       <div class="modal-body p-5 pt-0">
-        <form class="" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          {{ form.as_p }}
 
-          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign up</button>
-          <hr class="my-4">
-        </form>
+
+          {% if form.errors %}
+              {% for field in form %} 
+                {% for error in field.errors %}            
+                  <div class="alert alert-danger">
+                    {{ error|escape }}
+                  </div>
+                {% endfor %}
+              {% endfor %}
+              {% for error in form.non_field_errors %}
+                <div class="alert alert-danger">
+                  {{ error|escape }}
+                </div>
+              {% endfor %}
+          {% endif %}
+
+          <form method="post" action="{% url 'users:signup' %}">
+
+          {% csrf_token %}
+          
+          {% for field in form %} 
+
+            <div class="form-group row my-3"
+              {% if field.field.required %} 
+                aria-required="true"
+              {% else %}
+                aria-required="false"
+              {% endif %} >
+
+              <label for="{{ field.id_for_label }}">
+                {{ field.label }}
+                  {% if field.field.required %}
+                    <span class="required text-danger">*</span>
+                  {% endif %}
+              </label>
+              
+              <div>
+              {{ field|addclass:'form-control' }} 
+                {% if field.help_text %}
+                  <small 
+                    id="{{ field.id_for_label }}-help"
+                    class="form-text text-muted">
+                    {{ field.help_text|safe }}
+                  </small>
+                {% endif %}
+              </div>
+
+            </div>
+          {% endfor %}
+
+          <button class="w-100 mb-2 btn btn-lg rounded-4 btn-primary" type="submit">Sign Up</button>
+
+          </form>
+        </div> 
       </div>
     </div>
   </div>
 </div>
-
-
-
-{% endblock %}
-
+{% endblock %} 
